# factory-idle-game

./: Cargo.toml  index.html
src/: app.rs  lib.rs  main.rs  math.rs  state.rs
src/buttons/: mod.rs  top_bar_button.rs
src/systems/: mod.rs  wood_system.rs
src/windows/: mod.rs
src/windows/production/: wood.rs
